--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "iterm-mcp",
-  "version": "1.2.5",
+  "name": "iterm-mcp-multiple",
+  "version": "1.2.5+fork.1",
   "description": "A Model Context Protocol server that provides access to the currently active tab of iTerm",
-  "homepage": "https://github.com/ferrislucas/iterm-mcp#readme",
+  "homepage": "https://github.com/TrentBrown/iterm-mcp#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ferrislucas/iterm-mcp.git"
+    "url": "git+https://github.com/TrentBrown/iterm-mcp.git"
   },
-  "author": "Ferris Lucas",
+  "author": "Trent Brown",
   "bugs": {
-    "url": "https://github.com/ferrislucas/iterm-mcp/issues"
+    "url": "https://github.com/TrentBrown/iterm-mcp/issues"
   },
   "type": "module",
   "license": "MIT",
   "bin": {
-    "iterm-mcp": "./build/index.js"
+    "iterm-mcp-multiple": "./build/index.js"
   },
   "files": [
     "build"
