--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iterm-mcp-multiple",
-  "version": "1.2.5+fork.1",
+  "version": "1.4.1",
   "description": "A Model Context Protocol server that provides access to the currently active tab of iTerm",
   "homepage": "https://github.com/TrentBrown/iterm-mcp#readme",
   "repository": {
@@ -14,7 +14,7 @@
   "type": "module",
   "license": "MIT",
   "bin": {
-    "iterm-mcp-multiple": "./build/index.js"
+    "iterm-mcp-multiple": "build/index.js"
   },
   "files": [
     "build"
